--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="Captain-app" lang="en">
 <head>
-    <meta charset="UTF-8">
     <title> Project Just Started</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- Bootstrap core CSS -->
+    <!--<link href="assets/css/bootstrap.min.css" rel="stylesheet">-->
+    <!-- Custom styles for this template -->
+    <link href="WebContent/assets/css/captain.css" rel="stylesheet">
 </head>
 <body>
+<header></header>
+<section uiview>
 
+</section>
+<footer></footer>
+
+<!--jQuery-->
+<script src="node_modules/jquery/src/jquery.js"></script>
+<!--Angularjs-->
+<script src="node_modules/angular/angular.min.js"></script>
+<script src="node_modules/angular-route/angular-route.min.js"></script>
+<script src="node_modules/angular-local-storage/src/angular-local-storage.js"></script>
 </body>
 </html>
