Config  file added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="Captain-app" lang="en">
+<html ng-app="captainApp" lang="en">
 <head>
     <title> Project Just Started</title>
     <meta charset="UTF-8">
