--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <section ui-view>
 </section>
-
+<section>test commit</section>
 
 
 <!--<footer ng-include="'WebContent/template/footer.html'"></footer>-->
