--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 <header ng-include="'WebContent/template/header.html'"></header>
 
+
+<h1>My first Commit</h1>
+
+
+
 <section ui-view>
 </section>
 <section>test commit</section>
